# cuetip

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  example_function_agent.py  example_llm_agent.py  pyproject.toml  test_shot_optimisation.py  train_neural_surrogate.py
data/: fixed_function_averages.json
experiments/: create_motion_trails.sh  experiments_config.yaml  plot_config.yaml  visualise_gif.py
experiments/experiment_appendix/: analyse_reasoning.py  clean_reasoning_data.py  collect_reasoning_examples.py  dataset_feature_analysis.py  expected_value_correlation.py  run_eidf.sh
experiments/experiment_demo/: collect_skill_estimates.py  demo_explanation.py  demo_poolmaster.py  gen_seq_skill_estimate.py  gen_skill_estimate.py  interactive_demo.py  interactive_demo_kevin.py  plot_skill_estimate.py  random_params_distribution.py  run_eidf.sh  skill_estimate_data.py  test_agents.py
experiments/experiment_human_eval/: experiment.js  index.html  plot_all.py  save_data.php  style.css
experiments/experiment_one/: collect_ball_results.py  collect_noise_results.py  collect_results.py  plot_all.sh  plot_avg_models-agents.py  plot_ball_diff.py  plot_ball_potting.py  plot_game_lengths.py  plot_grid.py  plot_noise_ball_potting.py  plot_scatter.py  plot_single_model.py  run_ball_exp.py  run_cpu.sh  (+8 more)
poolagent/: README.md  __init__.py  dspy_definitions.py  experiment_manager.py  full_explain_shot.py  mcts.py  path.py  pool.py  pool_solver.py  utils.py
rules/: README.md  difficulty_rules.json  difficulty_rules.txt  value_rules.json  value_rules.txt
(+117 files in other folders)
