[project]
name = "cuetip"
version = "0.1.0"
description = "An Interactive and Explainable Physics-aware Pool Assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.7.0",
    "anyio>=4.9.0",
    "asyncer==0.0.8",
    "backoff>=2.2.1",
    "bayesian-optimization==1.5.1",
    "bitsandbytes>=0.46.0",
    "cachetools>=6.1.0",
    "datasets>=3.6.0",
    "diskcache>=5.6.3",
    "dspy==2.5.30",
    "httpx>=0.28.1",
    "joblib~=1.3",
    "json-repair>=0.46.2",
    "litellm==1.51.0",
    "magicattr~=0.1.6",
    "matplotlib>=3.10.3",
    "openai>=1.88.0",
    "optuna>=4.4.0",
    "pandas>=2.3.0",
    "phoenix>=0.9.1",
    "pooltool",
    "pydantic~=2.0",
    "regex>=2024.11.6",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "sentencepiece>=0.2.0",
    "tabulate>=0.9.0",
    "tenacity>=9.1.2",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
    "ujson>=5.10.0",
    "wandb>=0.20.1",
]

[tool.uv.sources]
pooltool = { git = "https://github.com/SeanMemery/pooltool-text.git" }
